patch for bug #257901 (by Szymon)